fixed modal spacing

--- a/client/src/components/MasterSchedule/Library.css
+++ b/client/src/components/MasterSchedule/Library.css
@@ -174,6 +174,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
+  margin-top: 4px;
 }
 
 .NotInShift {
